src/OpenCvSharp/Internal/Interop/NativeMethods.Features2D.DllImport.cs


        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_gftt_set_quality_level")]
        internal static extern int Features2DGfttSetQualityLevel(IntPtr gftt, double value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_gftt_get_min_distance")]
        internal static extern int Features2DGfttGetMinDistance(IntPtr gftt, out double value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_gftt_set_min_distance")]
        internal static extern int Features2DGfttSetMinDistance(IntPtr gftt, double value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_gftt_get_block_size")]
        internal static extern int Features2DGfttGetBlockSize(IntPtr gftt, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_gftt_set_block_size")]
        internal static extern int Features2DGfttSetBlockSize(IntPtr gftt, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_gftt_get_gradient_size")]
        internal static extern int Features2DGfttGetGradientSize(IntPtr gftt, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_gftt_set_gradient_size")]
        internal static extern int Features2DGfttSetGradientSize(IntPtr gftt, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_gftt_get_harris_detector")]
        internal static extern int Features2DGfttGetHarrisDetector(IntPtr gftt, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_gftt_set_harris_detector")]
        internal static extern int Features2DGfttSetHarrisDetector(IntPtr gftt, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_gftt_get_k")]
        internal static extern int Features2DGfttGetK(IntPtr gftt, out double value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_gftt_set_k")]
        internal static extern int Features2DGfttSetK(IntPtr gftt, double value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_gftt_detect_count")]
        internal static extern int Features2DGfttDetectCount(IntPtr gftt, IntPtr image, IntPtr mask, out int keypointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_gftt_detect_fill")]
        internal static extern int Features2DGfttDetectFill(IntPtr gftt, IntPtr image, IntPtr mask, NativeKeyPoint* keypoints, int keypointCapacity, out int keypointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_mser_create")]
        internal static extern int Features2DMserCreate(int delta, int minArea, int maxArea, double maxVariation, double minDiversity, int maxEvolution, double areaThreshold, double minMargin, int edgeBlurSize, out IntPtr mser);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_mser_release")]
        internal static extern void Features2DMserRelease(IntPtr mser);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_mser_clear")]
        internal static extern int Features2DMserClear(IntPtr mser);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_mser_empty")]
        internal static extern int Features2DMserEmpty(IntPtr mser, out int empty);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_mser_descriptor_size")]
        internal static extern int Features2DMserDescriptorSize(IntPtr mser, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_mser_descriptor_type")]
        internal static extern int Features2DMserDescriptorType(IntPtr mser, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_mser_default_norm")]
        internal static extern int Features2DMserDefaultNorm(IntPtr mser, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_mser_detect_count")]
        internal static extern int Features2DMserDetectCount(IntPtr mser, IntPtr image, IntPtr mask, out int keypointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_mser_detect_fill")]
        internal static extern int Features2DMserDetectFill(IntPtr mser, IntPtr image, IntPtr mask, NativeKeyPoint* keypoints, int keypointCapacity, out int keypointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_mser_get_delta")]
        internal static extern int Features2DMserGetDelta(IntPtr mser, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_mser_set_delta")]
        internal static extern int Features2DMserSetDelta(IntPtr mser, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_mser_get_min_area")]
        internal static extern int Features2DMserGetMinArea(IntPtr mser, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_mser_set_min_area")]
        internal static extern int Features2DMserSetMinArea(IntPtr mser, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_mser_get_max_area")]
        internal static extern int Features2DMserGetMaxArea(IntPtr mser, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_mser_set_max_area")]
        internal static extern int Features2DMserSetMaxArea(IntPtr mser, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_mser_get_max_variation")]
        internal static extern int Features2DMserGetMaxVariation(IntPtr mser, out double value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_mser_set_max_variation")]
        internal static extern int Features2DMserSetMaxVariation(IntPtr mser, double value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_mser_get_min_diversity")]
        internal static extern int Features2DMserGetMinDiversity(IntPtr mser, out double value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_mser_set_min_diversity")]
        internal static extern int Features2DMserSetMinDiversity(IntPtr mser, double value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_mser_get_max_evolution")]
        internal static extern int Features2DMserGetMaxEvolution(IntPtr mser, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_mser_set_max_evolution")]
        internal static extern int Features2DMserSetMaxEvolution(IntPtr mser, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_mser_get_area_threshold")]
        internal static extern int Features2DMserGetAreaThreshold(IntPtr mser, out double value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_mser_set_area_threshold")]
        internal static extern int Features2DMserSetAreaThreshold(IntPtr mser, double value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_mser_get_min_margin")]
        internal static extern int Features2DMserGetMinMargin(IntPtr mser, out double value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_mser_set_min_margin")]
        internal static extern int Features2DMserSetMinMargin(IntPtr mser, double value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_mser_get_edge_blur_size")]
        internal static extern int Features2DMserGetEdgeBlurSize(IntPtr mser, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_mser_set_edge_blur_size")]
        internal static extern int Features2DMserSetEdgeBlurSize(IntPtr mser, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_mser_get_pass2_only")]
        internal static extern int Features2DMserGetPass2Only(IntPtr mser, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_mser_set_pass2_only")]
        internal static extern int Features2DMserSetPass2Only(IntPtr mser, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_mser_detect_regions_count")]
        internal static extern int Features2DMserDetectRegionsCount(IntPtr mser, IntPtr image, out int regionCount, out int totalPointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_mser_detect_regions_fill")]
        internal static extern int Features2DMserDetectRegionsFill(IntPtr mser, IntPtr image, int* offsets, int offsetCapacity, NativePoint* points, int pointCapacity, NativeRect* bboxes, int bboxCapacity, out int regionCount, out int totalPointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_simple_blob_create_default")]
        internal static extern int Features2DSimpleBlobCreateDefault(out IntPtr detector);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_simple_blob_create")]
        internal static extern int Features2DSimpleBlobCreate(ref NativeSimpleBlobParams parameters, out IntPtr detector);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_simple_blob_release")]
        internal static extern void Features2DSimpleBlobRelease(IntPtr detector);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_simple_blob_clear")]
        internal static extern int Features2DSimpleBlobClear(IntPtr detector);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_simple_blob_empty")]
        internal static extern int Features2DSimpleBlobEmpty(IntPtr detector, out int empty);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_simple_blob_descriptor_size")]
        internal static extern int Features2DSimpleBlobDescriptorSize(IntPtr detector, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_simple_blob_descriptor_type")]
        internal static extern int Features2DSimpleBlobDescriptorType(IntPtr detector, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_simple_blob_default_norm")]
        internal static extern int Features2DSimpleBlobDefaultNorm(IntPtr detector, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_simple_blob_detect_count")]
        internal static extern int Features2DSimpleBlobDetectCount(IntPtr detector, IntPtr image, IntPtr mask, out int keypointCount);
